--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/plus"
-        android:roundIcon="@mipmap/plus_round"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/plus_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sweenov">
+        <activity android:name=".Assignment_Add"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
