--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id 'androidx.navigation.safeargs'
 }
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
