알람설정창 들어갈 시 5초 후에 푸시알림 기능

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.sweenov">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sweenov">
         <activity android:name=".ForLoading"></activity>
+        <activity android:name=".AlarmSetting"/>
         <activity android:name=".loginWithName">
 
             <intent-filter>
@@ -23,7 +25,19 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
+
+        <receiver android:name=".AlarmReceiver"
+            android:enabled="true"/>
+
+        <service android:name=".NotificationService"
+            android:enabled="true"/>
+        <activity android:name=".ResultActivity"
+            android:excludeFromRecents="true"
+            android:label="New Notification"
+            android:launchMode="singleTask"
+            android:taskAffinity=""/>
+
     </application>
 
 </manifest>
