--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.sweenov">
 
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -12,32 +12,43 @@
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sweenov">
-        <activity android:name=".ForLoading"></activity>
-        <activity android:name=".AlarmSetting"/>
-        <activity android:name=".loginWithName">
 
+        <activity android:name=".ForAlarm" />
+        <activity android:name=".ForLoading" />
+        <activity android:name=".AlarmSetting" />
+        <activity android:name=".loginWithName">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
 
-        <receiver android:name=".AlarmReceiver"
-            android:enabled="true"/>
 
-        <service android:name=".NotificationService"
-            android:enabled="true"/>
-        <activity android:name=".ResultActivity"
+
+        <service
+            android:name=".NotificationService"
+            android:enabled="true" />
+        <activity android:name=".ForReceivingAlarm"
+            android:enabled="true"
+            />
+        <activity
+            android:name=".ResultActivity"
             android:excludeFromRecents="true"
             android:label="New Notification"
             android:launchMode="singleTask"
-            android:taskAffinity=""/>
+            android:taskAffinity="" />
 
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.example.limky.broadcastreceiver.gogo"></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
